package cn.zhanghub.designPattern.principle.UML;

/**
 * 类描述：
 *
 * @ClassName Car
 * @Author 张文军
 * @Date 2021/4/29 3:40
 * @Version 1.0
 */

public class Car {
    private Tires tires;
    private CarEngine engine;
}
