package cn.zhanghub.designPattern.principle.UML;

/**
 * 类描述：
 *
 * @ClassName CarEngine
 * @Author 张文军
 * @Date 2021/4/29 3:41
 * @Version 1.0
 */

public class CarEngine {
}
